Do rest i18n for TakquickstartWin (fi/en)

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -506,5 +506,52 @@
   "TakQuickstartWin2.unfoldableCard3.description4": "c. Select the components to install in the Setup Wizard.<br>Select at least the following component:<ul><li><strong>Data Sync</strong></li></ul>",
   "TakQuickstartWin2.unfoldableCard3.description5": "d. Press <strong>Next</strong>. The Wizard is ready to start the installation, press <strong>Install</strong>.",
   "TakQuickstartWin2.unfoldableCard3.description6": "e. Press <strong>Next</strong>.",
-  "TakQuickstartWin2.unfoldableCard3.description7": "The application is now installed.<br>Next, we will open the installed application."
+  "TakQuickstartWin2.unfoldableCard3.description7": "The application is now installed.<br>Next, we will open the installed application.",
+
+  "TAKQUICKSTARTWIN3": "TAKQUICKSTARTWIN3",
+  "TakQuickstartWin3.navbarTitle": "WinTAK Quickstart",
+  "TakQuickstartWin3.statusBarTitle": "Configure WinTAK (3/4)",
+  "TakQuickstartWin3.serviceInfoCard.details": "WinTAK Quickstart - phase 3: <strong>Configure WinTAK</strong><br>Recommendation: Work in pairs - one reads the instructions, the other performs the actions.",
+  "TakQuickstartWin3.unfoldableCard1.title": "1. Open the Application",
+  "TakQuickstartWin3.unfoldableCard1.description1": "Open the <strong>WinTAK</strong> application from the desktop.",
+  "TakQuickstartWin3.unfoldableCard2.title": "2. Accept the EULA",
+  "TakQuickstartWin3.unfoldableCard2.description1": "After a moment, the <strong>Device Setup Wizard</strong> will open.",
+  "TakQuickstartWin3.unfoldableCard2.description2": "As its first step, accept the <strong>EULA.</strong>",
+  "TakQuickstartWin3.unfoldableCard3.title": "3. Establish Server Connection",
+  "TakQuickstartWin3.unfoldableCard3.description1": "Next, establish a server connection.<br>a. The application will ask if you want to import a data package. This refers to your Client Package <strong>Name.zip.</strong>, which you should download from this app's frontpage.",
+  "TakQuickstartWin3.unfoldableCard3.description2": "b. Select <strong>Yes</strong>. Point to the <strong>Client Package</strong> from your download folder/elsewhere.",
+  "TakQuickstartWin3.unfoldableCard3.description3": "Once you have chosen the package and pressed Open, the <strong>Select Import Strategy</strong> window will open.",
+  "TakQuickstartWin3.unfoldableCard3.description4": "c. Select <strong>UserPreferenceImportStrategy</strong>, and press OK.",
+  "TakQuickstartWin3.unfoldableCard4.title": "4. Choose a Map Base",
+  "TakQuickstartWin3.unfoldableCard4.description1": "With the message foundation package, various <strong>map bases</strong> may come.",
+  "TakQuickstartWin3.unfoldableCard4.description2": "Choose your preferred map base. Note that the map base can be changed later.",
+  "TakQuickstartWin3.unfoldableCard5.title": "5. Set Callsign",
+  "TakQuickstartWin3.unfoldableCard5.description1": "The Device Setup Wizard will ask if you want to define your callsign.",
+  "TakQuickstartWin3.unfoldableCard5.description2": "Select <strong>Yes</strong> and enter your assigned callsign.<br> The application will ask for additional WMS (map) service sources.",
+  "TakQuickstartWin3.unfoldableCard5.description3": "These are not needed, clear the boxes and press OK.",
+  "TakQuickstartWin3.unfoldableCard6.title": "6. Set Plugins",
+  "TakQuickstartWin3.unfoldableCard6.description1": "The application will ask if plugins should be installed. Select <strong>DataSync</strong> and press OK.",
+  "TakQuickstartWin3.unfoldableCard6.description2": "Next, the application will ask if DTED-0 elevation models should be downloaded automatically.",
+  "TakQuickstartWin3.unfoldableCard6.description3": "Select <strong>Yes</strong>.",
+  "TakQuickstartWin3.unfoldableCard7.title": "7. Review Settings",
+  "TakQuickstartWin3.unfoldableCard7.description1": "Now the basic settings of WinTAK have been made. Let's check <strong>My Preferences.</strong>",
+  "TakQuickstartWin3.unfoldableCard7.description2": "Your Callsign, team color (<strong>My Team</strong>), and role (<strong>My Role</strong>) should match the ones assigned to you. <strong>My Display Type</strong> should be Ground.",
+  "TakQuickstartWin3.unfoldableCard7.note": "If you are a command post user, your role should be HQ.",
+  "TakQuickstartWin3.unfoldableCard7.description3": "Also, check the <strong>TAK Network Status.</strong> A green cloud means the server connection is OK, red means it is disconnected.",
+  "TakQuickstartWin3.unfoldableCard7.description4": "If the connection has not been established, first check if your internet connection is working. If it is, and the TAK Network Status is still red, restart the application.<br><br>Troubleshooting help is available at the end of this guide.",
+
+  "TAKQUICKSTARTWIN4": "TAKQUICKSTARTWIN4",
+  "TakQuickstartWin4.navbarTitle": "WinTAK Quickstart",
+  "TakQuickstartWin4.statusBarTitle": "Set Measurement Units (4/4)",
+  "TakQuickstartWin4.serviceInfoCard.details": "WinTAK setup - phase 4: <strong>Set Measurement Units</strong><br>Recommendation: Work in pairs - one reads the instructions, the other performs the actions.",
+  "TakQuickstartWin4.unfoldableCard1.title": "1. Check Unit Settings",
+  "TakQuickstartWin4.unfoldableCard1.description1": "Check WinTAK's unit settings.<br>Press the three stacked lines, <strong>the hamburger menu</strong>, in the top left corner.",
+  "TakQuickstartWin4.unfoldableCard1.description2": "Select <strong>Settings</strong>.",
+  "TakQuickstartWin4.unfoldableCard1.description3": "Select <strong>Display Preferences</strong>.",
+  "TakQuickstartWin4.unfoldableCard1.description4": "The Display Preferences menu opens. Select <strong>Unit Display Format Preferences</strong>.",
+  "TakQuickstartWin4.unfoldableCard1.description5": "Check that the settings are as shown in the picture. Change if necessary.",
+  "TakQuickstartWin4.unfoldableCard1.description6": "WinTAK is now set up!<br>The Usage Guide according to our basic model can be found on this Deploy App's front page menu, by clicking <strong>Usage</strong>.",
+  "TakQuickstartWin4.unfoldableCard2.title": "2. Troubleshooting",
+  "TakQuickstartWin4.unfoldableCard2.description1": "TBD: TroubleShoot.",
+  "TakQuickstartWin4.alterForward": "Done! Go back."
 }
