--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -505,5 +505,52 @@
   "TakQuickstartWin2.unfoldableCard3.description4": "c. Valitse Setup Wizardissa asennettavat lisäosat.<br>Valitse ainakin seuraavat lisäosat:<ul><li><strong>Data Sync</strong></li></ul>",
   "TakQuickstartWin2.unfoldableCard3.description5": "d. Paina <strong>Next</strong>. Wizard on valmis aloittamaan asennuksen, paina <strong>Install</strong>.",
   "TakQuickstartWin2.unfoldableCard3.description6": "e. Paina <strong>Next</strong>.",
-  "TakQuickstartWin2.unfoldableCard3.description7": "Sovellus on nyt asennettu.<br>Seuraavaksi avataan asennettu sovellus."
+  "TakQuickstartWin2.unfoldableCard3.description7": "Sovellus on nyt asennettu.<br>Seuraavaksi avataan asennettu sovellus.",
+
+  "TAKQUICKSTARTWIN3": "TAKQUICKSTARTWIN3",
+  "TakQuickstartWin3.navbarTitle": "WinTAK käyttöönotto",
+  "TakQuickstartWin3.statusBarTitle": "Aseta WinTAK (3/4)",
+  "TakQuickstartWin3.serviceInfoCard.details": "WinTAK käyttöönotto - vaihe 3: <strong>Aseta WinTAK</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee.",
+  "TakQuickstartWin3.unfoldableCard1.title": "1. Avaa sovellus",
+  "TakQuickstartWin3.unfoldableCard1.description1": "Avaa <strong>WinTAK</strong>-sovellus työpöydältä.",
+  "TakQuickstartWin3.unfoldableCard2.title": "2. Hyväksy EULA",
+  "TakQuickstartWin3.unfoldableCard2.description1": "Hetken kuluttua aukeaa <strong>Device Setup Wizard</strong>.",
+  "TakQuickstartWin3.unfoldableCard2.description2": "Sen ensimmäisenä askeleena hyväksy <strong>EULA.</strong>",
+  "TakQuickstartWin3.unfoldableCard3.title": "3. Muodosta palvelinyhteys",
+  "TakQuickstartWin3.unfoldableCard3.description1": "Seuraavaksi muodostetaan palvelinyhteys.<br>a. Sovellus kysyy, haluatko tuoda data packagen. Tämä tarkoittaa viestiperustepakettiasi <strong>Nimi.zip.</strong>",
+  "TakQuickstartWin3.unfoldableCard3.description2": "b. Valitse <strong>Yes</strong>.<br>Osoita <strong>viestiperustepaketti</strong> latauskansiostasi/muualta.",
+  "TakQuickstartWin3.unfoldableCard3.description3": "Kun olet valinnut paketin ja painanut Open, aukeaa <strong>Select Import Strategy</strong>.",
+  "TakQuickstartWin3.unfoldableCard3.description4": "c. Valitse <strong>UserPreferenceImportStrategy</strong>, ja paina OK.",
+  "TakQuickstartWin3.unfoldableCard4.title": "4. Valitse karttapohja",
+  "TakQuickstartWin3.unfoldableCard4.description1": "Viestiperustepaketin kanssa voi tulla erilaisia <strong>karttapohjia.</strong>",
+  "TakQuickstartWin3.unfoldableCard4.description2": "Valitse haluamasi karttapohja. Huomaa, että karttapohjaa voi vaihtaa myöhemmin.",
+  "TakQuickstartWin3.unfoldableCard5.title": "5. Aseta Callsign",
+  "TakQuickstartWin3.unfoldableCard5.description1": "Device Setup Wizard kysyy, haluatko määrittää peitenimesi (Callsign).",
+  "TakQuickstartWin3.unfoldableCard5.description2": "Valitse <strong>Yes</strong> ja anna sinulle käsketty peitenimi.<br>Sovellus kysyy ylimääräisiä WMS (kartta)-palvelulähteitä.",
+  "TakQuickstartWin3.unfoldableCard5.description3": "Näitä ei tarvita, tyhjennä ruudut ja paina OK.",
+  "TakQuickstartWin3.unfoldableCard6.title": "6. Aseta pluginit",
+  "TakQuickstartWin3.unfoldableCard6.description1": "Sovellus kysyy, asennetaanko plugineja. Valitse <strong>DataSync</strong> ja paina OK.",
+  "TakQuickstartWin3.unfoldableCard6.description2": "Seuraavaksi sovellus kysyy, ladataanko automaattisesti DTED-0-korkeusmallit.",
+  "TakQuickstartWin3.unfoldableCard6.description3": "Valitse <strong>Yes</strong>.",
+  "TakQuickstartWin3.unfoldableCard7.title": "7. Tarkasta asetukset",
+  "TakQuickstartWin3.unfoldableCard7.description1": "Nyt WinTAKin perusasetukset on tehty. Tarkastetaan vielä <strong>My Preferences.</strong>",
+  "TakQuickstartWin3.unfoldableCard7.description2": "Peite (<strong>Callsign</strong>), joukon väri (<strong>My Team</strong>) ja rooli (<strong>My Role</strong>) tulee olla sinulle käsketyn mukaiset. <strong>My Display Type</strong> on Ground.",
+  "TakQuickstartWin3.unfoldableCard7.note": "Komentopaikkakäyttäjänä roolisi tulee olla HQ.",
+  "TakQuickstartWin3.unfoldableCard7.description3": "Tarkista myös <strong>TAK Network Status.</strong> Vihreä pilvi tarkoittaa, että palvelinyhteys on OK, punainen, että yhteys on poikki.",
+  "TakQuickstartWin3.unfoldableCard7.description4": "Jos yhteys ei ole muodostunut, tarkista ensin, onko internetyhteytesi kunnossa. Jos on, ja TAK Network Status on silti punainen, käynnistä sovellus uudelleen.<br>Vianselvitysapua on tämän ohjeen lopussa.",
+
+  "TAKQUICKSTARTWIN4": "TAKQUICKSTARTWIN4",
+  "TakQuickstartWin4.navbarTitle": "WinTAK käyttöönotto",
+  "TakQuickstartWin4.statusBarTitle": "Aseta mittayksiköt (4/4)",
+  "TakQuickstartWin4.serviceInfoCard.details": "WinTAK käyttöönotto - vaihe 4: <strong>Aseta mittayksiköt</strong><br>Suositus: Aseta parin kanssa - toinen näyttää ohjeita, toinen tekee.",
+  "TakQuickstartWin4.unfoldableCard1.title": "1. Tarkista mittayksikköasetukset",
+  "TakQuickstartWin4.unfoldableCard1.description1": "Tarkista WinTAKin mittayksikköasetukset.<br>Paina vasemmasta yläkulmasta kolmea päällekkäistä viivaa, <strong>hampurilaisvalikkoa</strong>.",
+  "TakQuickstartWin4.unfoldableCard1.description2": "Valitse <strong>Settings</strong>.",
+  "TakQuickstartWin4.unfoldableCard1.description3": "Valitse <strong>Display Preferences</strong>.",
+  "TakQuickstartWin4.unfoldableCard1.description4": "Display Preferences-valikko avautuu. Valitse <strong>Unit Display Format Preferences</strong>.",
+  "TakQuickstartWin4.unfoldableCard1.description5": "Tarkista, että asetukset ovat kuvan mukaiset. Vaihda tarvittaessa.",
+  "TakQuickstartWin4.unfoldableCard1.description6": "WinTAK on nyt asetettu!<br>Mallin mukaisen käytön ohjeet löydät Rasenmaeherin TAK-valikon etusivulta <strong>Käyttö joukossa</strong>.",
+  "TakQuickstartWin4.unfoldableCard2.title": "2. Vianetsintä",
+  "TakQuickstartWin4.unfoldableCard2.description1": "TBD: TroubleShoot.",
+  "TakQuickstartWin4.alterForward": "Valmis! Palaa tästä."
 }
