do i18n for takusageandroid (fi/en)

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -553,5 +553,59 @@
   "TakQuickstartWin4.unfoldableCard1.description6": "WinTAK is now set up!<br>The Usage Guide according to our basic model can be found on this Deploy App's front page menu, by clicking <strong>Usage</strong>.",
   "TakQuickstartWin4.unfoldableCard2.title": "2. Troubleshooting",
   "TakQuickstartWin4.unfoldableCard2.description1": "TBD: TroubleShoot.",
-  "TakQuickstartWin4.alterForward": "Done! Go back."
+  "TakQuickstartWin4.alterForward": "Done! Go back.",
+
+  "TAKUSAGEANDROID1": "TAKUSAGEANDROID1",
+  "TakUsageAndroid1.navbarTitle": "ATAK: Usage Guide",
+  "TakUsageAndroid1.statusBarTitle": "Move the Map and See Yourself (1/4)",
+  "TakUsageAndroid1.serviceInfoCard.details": "ATAK Usage Guide - part 1: <strong>move the map and see yourself</strong><br>",
+  "TakUsageAndroid1.unfoldableCard1.title": "1. Move the Map",
+  "TakUsageAndroid1.unfoldableCard1.step1": "<strong>Navigation buttons</strong> are in the top left corner:",
+  "TakUsageAndroid1.unfoldableCard1.step2": "a. Move the map base with <strong>your finger.</strong>",
+  "TakUsageAndroid1.unfoldableCard1.step3": "b. Zoom the map with <strong>a pinch gesture.</strong>",
+  "TakUsageAndroid1.unfoldableCard1.step4": "c. Rotate the map base with <strong>two fingers.</strong>",
+  "TakUsageAndroid1.unfoldableCard2.title": "2. Your Location and Others",
+  "TakUsageAndroid1.unfoldableCard2.step1": "a. Your location is shown as an <strong>arrowhead.</strong>",
+  "TakUsageAndroid1.unfoldableCard2.step2": "b. Other users' callsigns start to appear as you zoom in.",
+  "TakUsageAndroid1.unfoldableCard2.step3": "c. The color of other users' circle icons indicates the team color (or another assigned meaning).",
+
+  "TAKUSAGEANDROID2": "TAKUSAGEANDROID2",
+  "TakUsageAndroid2.navbarTitle": "Usage Guide: ATAK",
+  "TakUsageAndroid2.statusBarTitle": "Making Observations with Point Dropper (2/3)",
+  "TakUsageAndroid2.serviceInfoCard.details": "Usage Guide ATAK - part 2: <strong>Making & sharing observations with Point Dropper</strong><br>",
+  "TakUsageAndroid2.unfoldableCard1.title": "1. ATAK's Observation Tools",
+  "TakUsageAndroid2.unfoldableCard1.step1": "In ATAK, you can do observations in two ways: <strong>Point Dropper</strong> and <strong>Quick Pic</strong>.<br><br>With <strong>Point Dropper</strong> tool, you drop a mark to the map. You can attach data, including images from your device's gallery, to the mark. With <strong>Quick Pic</strong> tool, you can take a picture directly into ATAK and fill in the details. Either way, after using the tool you need to share the marks. <br><br>Let's take a look at Point Dropper first.",
+  "TakUsageAndroid2.unfoldableCard2.title": "2. Making Observations with Point Dropper",
+  "TakUsageAndroid2.unfoldableCard2.step1": "a. Open the three lines menu (hamburger menu), select <strong>Point Dropper</strong>.<br><br>Or press and hold on a point on the map and select the Point Dropper symbol from the circle menu that appears.",
+  "TakUsageAndroid2.unfoldableCard2.step2": "b. Choose the type of marker to add: an observation of an unknown affiliation would be the <strong>yellow</strong> marker.",
+  "TakUsageAndroid2.unfoldableCard2.step3": "c. If you selected Point Dropper from the hamburger menu, tap the map to choose a location for the observation.<br><br>The observation marker appears on the map.",
+  "TakUsageAndroid2.unfoldableCard3.title": "3. Point Dropper: Edit",
+  "TakUsageAndroid2.unfoldableCard3.step1": "a. If you plan to edit the marker immediately after adding it, first deselect the marker by tapping the map. <strong>Press</strong> the marker so that the circle menu appears.",
+  "TakUsageAndroid2.unfoldableCard3.step2": "b. Edit the marker details by pressing the <strong>edit</strong> icon to the right of the trash can in the circle menu.",
+  "TakUsageAndroid2.unfoldableCard3.step3": "c. The Observation Details view opens. Scroll to the bottom. The last field is <strong>Remarks</strong>, where text can be entered by pressing the <strong>pencil symbol</strong>.",
+  "TakUsageAndroid2.unfoldableCard3.step4": "d. Enter the text.",
+  "TakUsageAndroid2.unfoldableCard3.step5": "e. In the same Observation Details menu, pressing the <strong>paperclip</strong> icon shows the observation's attachments.",
+  "TakUsageAndroid2.unfoldableCard3.step6": "f. Add new attachments by pressing the <strong>+</strong> icon at the top of the menu:",
+  "TakUsageAndroid2.unfoldableCard3.step7": "g. Once you have completed the observation details, <strong>send it to HQ</strong> with the <strong>Send</strong> button:",
+  "TakUsageAndroid2.unfoldableCard3.note": "Users with HQ role will then receive your mark. According to our basic model, they should be your Command Post users. <br /> <br/> Remember, a sent marker is never a sufficient notice. Confirm by sending the recipient a message in the instructed manner.",
+
+  "TAKUSAGEANDROID3": "TAKUSAGEANDROID3",
+  "TakUsageAndroid3.navbarTitle": "Usage guide: ATAK",
+  "TakUsageAndroid3.statusBarTitle": "Quick Pic (3/3)",
+  "TakUsageAndroid3.serviceInfoCard.details": "Usage guide ATAK - part 3: <strong>Make observations: Quick Pic</strong><br>",
+  "TakUsageAndroid3.unfoldableCard1.title": "1. ATAK's Observation Tools",
+  "TakUsageAndroid3.unfoldableCard1.description": "In ATAK, observations can be made in two ways: <strong>Point Dropper</strong> and <strong>Quick Pic</strong>.<br><br>With <strong>Point Dropper</strong>, you mark an observation to which attachments, including images from the device gallery, can be added. With <strong>Quick Pic</strong>, you take a picture directly into ATAK and complete the details.<br><br>Let's examine Quick Pic by second.",
+  "TakUsageAndroid3.unfoldableCard2.title": "2. Making Observations with Quick Pic",
+  "TakUsageAndroid3.unfoldableCard2.description1": "a. Open the three lines menu (hamburger menu), select <strong>Quick Pic</strong> (camera icon).",
+  "TakUsageAndroid3.unfoldableCard2.description2": "b. The camera opens. Take a picture and approve it.",
+  "TakUsageAndroid3.unfoldableCard2.description3": "c. You have now made a Quick Pic observation.",
+  "TakUsageAndroid3.unfoldableCard3.title": "3. Edit Quick Pic Observation",
+  "TakUsageAndroid3.unfoldableCard3.description1": "Press the observation that appeared on the map.",
+  "TakUsageAndroid3.unfoldableCard3.description2": "It then becomes active, and the circle menu opens.",
+  "TakUsageAndroid3.unfoldableCard3.description3": "<strong>Edit</strong> the marker's details by pressing the <strong>edit</strong> icon on the right side of the trash can in the circle menu.<br><br>Above the picture on the right is the <strong>Edit caption</strong> symbol <strong>(pen)</strong>. Press it to enter text.",
+  "TakUsageAndroid3.unfoldableCard3.description4": "Enter the text. <br><br>Once you have completed the details, send it with the <strong>Send</strong> button in the bottom right corner to HQ (Send in the bottom right corner).",
+  "TakUsageAndroid3.unfoldableCard3.description5": "Select <strong>Contact</strong> from the menu that opens.",
+  "TakUsageAndroid3.unfoldableCard3.description6": "Select <strong>HQ</strong> as the recipient and send.",
+  "TakUsageAndroid3.unfoldableCard3.description7": "Great! You now know how to use the ATAK, according to our basic operating model.<br><br> Users with HQ role will then receive your mark. According to our basic model, they should be your Command Post users. <br /> <br/> Remember, a sent marker is never a sufficient notice. Confirm by sending the recipient a message in the instructed manner.",
+  "TakUsageAndroid3.alterForward": "Done! Go back."
 }
