--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -552,5 +552,59 @@
   "TakQuickstartWin4.unfoldableCard1.description6": "WinTAK on nyt asetettu!<br>Mallin mukaisen käytön ohjeet löydät Rasenmaeherin TAK-valikon etusivulta <strong>Käyttö joukossa</strong>.",
   "TakQuickstartWin4.unfoldableCard2.title": "2. Vianetsintä",
   "TakQuickstartWin4.unfoldableCard2.description1": "TBD: TroubleShoot.",
-  "TakQuickstartWin4.alterForward": "Valmis! Palaa tästä."
+  "TakQuickstartWin4.alterForward": "Valmis! Palaa tästä.",
+
+  "TAKUSAGEANDROID1": "TAKUSAGEANDROID1",
+  "TakUsageAndroid1.navbarTitle": "ATAK: Käyttö joukossa",
+  "TakUsageAndroid1.statusBarTitle": "Liikuta karttaa ja näe omat (1/3)",
+  "TakUsageAndroid1.serviceInfoCard.details": "Käyttö joukossa ATAK - vaihe 1: <strong>liikuta karttaa ja näe omat</strong><br>",
+  "TakUsageAndroid1.unfoldableCard1.title": "1. Liikuta karttaa",
+  "TakUsageAndroid1.unfoldableCard1.step1": "<strong>Navigaationapit</strong> ovat vasemmassa yläkulmassa:",
+  "TakUsageAndroid1.unfoldableCard1.step2": "a. Liikuta karttapohjaa <strong>sormella.</strong>",
+  "TakUsageAndroid1.unfoldableCard1.step3": "b. Zoomaa karttaa <strong>nipistysotteella.</strong>",
+  "TakUsageAndroid1.unfoldableCard1.step4": "c. Käännä karttapohjaa <strong>kahdella sormella.</strong>",
+  "TakUsageAndroid1.unfoldableCard2.title": "2. Oma ja muiden sijainti",
+  "TakUsageAndroid1.unfoldableCard2.step1": "a. Oma sijaintisi näkyy <strong>nuolenpäänä.</strong>",
+  "TakUsageAndroid1.unfoldableCard2.step2": "b. Muiden käyttäjien peitenimet alkavat näkyä zoomatessa.",
+  "TakUsageAndroid1.unfoldableCard2.step3": "c. Muiden käyttäjien pallokuvakkeen väri kuvaa joukkueen väriä (tai muuta käskettyä merkitystä).",
+
+  "TAKUSAGEANDROID2": "TAKUSAGEANDROID2",
+  "TakUsageAndroid2.navbarTitle": "Käyttö joukossa: ATAK",
+  "TakUsageAndroid2.statusBarTitle": "Tee havaintoja merkein: Point Dropper (2/3)",
+  "TakUsageAndroid2.serviceInfoCard.details": "Käyttö joukossa ATAK - vaihe 2: <strong>Tee havaintoja merkein: Point Dropper</strong><br>",
+  "TakUsageAndroid2.unfoldableCard1.title": "1. ATAKin havaintotyökalut",
+  "TakUsageAndroid2.unfoldableCard1.step1": "ATAKissa havaintoja voi tehdä kahdella eri tavalla: <strong>Point Dropper</strong> ja <strong>Quick Pic</strong>.<br><br><strong>Point Dropperilla</strong> merkitään havainto, johon voi liittää liitteitä, ml. kuvia laitteen galleriasta. <strong>Quick Picillä</strong> otetaan kuva suoraan TAKiin ja täydennetään tietoja.<br><br>Tarkastellaan ensin Point Dropperia.",
+  "TakUsageAndroid2.unfoldableCard2.title": "2. Tee havaintoja Point Dropperilla",
+  "TakUsageAndroid2.unfoldableCard2.step1": "a. Avaa kolme viivaa-valikko (hampurilaisvalikko), valitse <strong>Point Dropper</strong>.<br><br>Tai paina haluamaasi kohtaa kartalla pitkään ja valitse Point Dropperin symboli avautuvasta ympyrävalikosta.",
+  "TakUsageAndroid2.unfoldableCard2.step2": "b. Valitse lisättävän merkin tyyppi: havainto, eli <strong>keltainen</strong> merkki.",
+  "TakUsageAndroid2.unfoldableCard2.step3": "c. Jos valitsit Point Dropperin hampurilaisvalikosta, täppää karttaa valitaksesi havainnolle sijainnin.<br><br>Havaintomerkki ilmestyy kartalle.",
+  "TakUsageAndroid2.unfoldableCard3.title": "3. Point Dropper: Muokkaa",
+  "TakUsageAndroid2.unfoldableCard3.step1": "a. Jos aiot muokata heti merkin lisäämisen jälkeen, poista ensinvalinta merkistä täppäämällä karttaa. <strong>Paina</strong> merkkiä, jotta ympyrävalikko aukeaa.",
+  "TakUsageAndroid2.unfoldableCard3.step2": "b. Muokkaa merkin tietoja painamalla ympyrävalikossa roskakorin oikealla puolella olevaa <strong>edit</strong>-kuvaketta.",
+  "TakUsageAndroid2.unfoldableCard3.step3": "c. Aukeaa Havainnon tiedot-näkymä. Kelaa sen pohjalle. Alimmaisena on kenttä <strong>Remarks</strong>, jonne voi syöttää tekstiä painamalla <strong>kynäsymbolia</strong>.",
+  "TakUsageAndroid2.unfoldableCard3.step4": "d. Syötä tekstiä.",
+  "TakUsageAndroid2.unfoldableCard3.step5": "e. Samassa Havainnon tiedot -valikossa painamalla <strong>klemmari</strong>-kuvaketta näet havainnon liitteet.",
+  "TakUsageAndroid2.unfoldableCard3.step6": "f. Lisää uusia liitteitä painamalla <strong>+</strong>-kuvaketta valikon ylärivistä:",
+  "TakUsageAndroid2.unfoldableCard3.step7": "g. Kun olet täydentänyt havainnon tiedot, lähetä se <strong>Send</strong>-napilla HQ:lle:",
+  "TakUsageAndroid2.unfoldableCard3.note": "Muista, että merkki ei ole koskaan riittävä ilmoitus. Varmenna lähettämällä käsketyllä tavalla sanoma.",
+
+  "TAKUSAGEANDROID3": "TAKUSAGEANDROID3",
+  "TakUsageAndroid3.navbarTitle": "Käyttö joukossa: ATAK",
+  "TakUsageAndroid3.statusBarTitle": "Quick Pic (3/3)",
+  "TakUsageAndroid3.serviceInfoCard.details": "Käyttö joukossa ATAK - vaihe 3: <strong>Tee havaintoja: Quick Pic</strong><br>",
+  "TakUsageAndroid3.unfoldableCard1.title": "1. ATAKin havaintotyökalut",
+  "TakUsageAndroid3.unfoldableCard1.description": "ATAKissa havaintoja voi tehdä kahdella eri tavalla: <strong>Point Dropper</strong> ja <strong>Quick Pic</strong>.<br><br><strong>Point Dropperilla</strong> merkitään havainto, johon voi liittää liitteitä, ml. kuvia laitteen galleriasta. <strong>Quick Picillä</strong> otetaan kuva suoraan TAKiin ja täydennetään tietoja.<br><br>Tarkastellaan toiseksi Quick Piciä.",
+  "TakUsageAndroid3.unfoldableCard2.title": "2. Tee havaintoja Quick Picillä",
+  "TakUsageAndroid3.unfoldableCard2.description1": "a. Avaa kolme viivaa-valikko (hampurilaisvalikko), valitse <strong>Quick Pic</strong> (kameran kuvake).",
+  "TakUsageAndroid3.unfoldableCard2.description2": "b. Kamera avautuu. Ota kuva ja hyväksy se.",
+  "TakUsageAndroid3.unfoldableCard2.description3": "c. Olet nyt tehnyt Quick Pic-havainnon.",
+  "TakUsageAndroid3.unfoldableCard3.title": "3. Muokkaa Quick Pic-havaintoa",
+  "TakUsageAndroid3.unfoldableCard3.description1": "Paina kartalle tullutta havaintoa.",
+  "TakUsageAndroid3.unfoldableCard3.description2": "Tällöin se muuttuu aktiiviseksi, ja ympyrävalikko aukeaa.",
+  "TakUsageAndroid3.unfoldableCard3.description3": "<strong>Muokkaa</strong> merkin tietoja painamalla ympyrävalikossa roskakorin oikealla puolella olevaa <strong>edit</strong>-kuvaketta.<br><br>Kuvan yläpuolella oikealla on <strong>Edit caption</strong>-symboli <strong>(kynä)</strong>. Paina sitä syöttääksesi tekstiä.",
+  "TakUsageAndroid3.unfoldableCard3.description4": "Syötä tekstiä. <br> <br>Kun olet täydentänyt tiedot, lähetä se oikean alakulman <strong>Send</strong>-napilla HQ:lle (Send oikeassa alakulmassa).",
+  "TakUsageAndroid3.unfoldableCard3.description5": "Valitse aukeavasta valikosta <strong>Contact</strong>.",
+  "TakUsageAndroid3.unfoldableCard3.description6": "Valitse vastaanottajaksi <strong>HQ</strong> ja lähetä.",
+  "TakUsageAndroid3.unfoldableCard3.description7": "Hienoa! Tunnet nyt ATAK-sovelluksen käytön perustoimintamallin mukaisesti.",
+  "TakUsageAndroid3.alterForward": "Valmis! Palaa takaisin."
 }
